Make sure local annotations editor never collapses too much.
Sometimes when content was completely deleted it became useless.

--- a/client/css/_viewer.styl
+++ b/client/css/_viewer.styl
@@ -477,15 +477,19 @@ annotations-control-height = 30px
   padding 10px
 
 .annotations-editor.collapsed
+  min-height 50px
+
   .form-header
     display none
 
   .form-content
+    min-height 28px
+
     .format-toolbar
       display none
 
     .form-body .annotation-content-editor
-      min-height initial
+      min-height 16px
 
       p
         margin 6px 0
